--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     
-<p><h1>Proj</h1></p>
-
+<p>
+    <h1>Title</h1>
+    <h2>Title 2</h2>
+</p>
 
 
     <script src="app.js"></script>
